basic details,support headers

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <title>PetLover</title>
 </head>
 <body>
-    
+    <header class="contact__details-header">
+        <nav class="contact__details-nav1">
+            <ul class="help-counter">
+                <li class="opt">
+                    <a href="#">FAQs</a>
+                    <span>|</span>
+                </li>
+                <li class="opt">
+                    <a href="#">Help</a>
+                    <span>|</span>
+                </li>
+                <li class="opt">
+                    <a href="#">Support</a>
+                </li>
+            </ul>
+            <ul class="social-links">
+                <li class="social-link">
+                    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                </li>
+                <li class="social-link">
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li class="social-link">
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                </li>
+                <li class="social-link">
+                    <a href=""><i class="fa-brands fa-instagram"></i></i></a>
+                </li>
+                <li class="social-link">
+                    <a href=""><i class="fa-brands fa-youtube"></i></a>
+                </li>
+            </ul>
+        </nav>
+        <nav class="contact__details-nav2">
+            <div class="title">
+                <h1><span>Pet</span>Lover</h1>
+            </div>
+            <div class="basic__details">
+                <div class="basic__detail">
+                    <h6>Opening Hours</h6>
+                    <p>8.00AM - 9.00PM</p>
+                </div>
+                <div class="basic__detail" id="email">
+                    <h6>Email Us</h6>
+                    <p>info@example.com</p>
+                </div>
+                <div class="basic__detail">
+                    <h6>Opening Hours</h6>
+                    <p>+012 345 6789</p>
+                </div>
+            </div>
+            
+        </nav>
+    </header>
 </body>
 </html>
