--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -56,12 +56,33 @@
                     <p>info@example.com</p>
                 </div>
                 <div class="basic__detail">
-                    <h6>Opening Hours</h6>
+                    <h6>Call Us</h6>
                     <p>+012 345 6789</p>
                 </div>
             </div>
             
         </nav>
     </header>
+    <div class="main__header">
+        <nav class="main__nav">
+            <ul class="main__nav-items">
+                <li class="main__nav-item"><a href="#"></a>Home</li>
+                <li class="main__nav-item"><a href="#"></a>About</li>
+                <li class="main__nav-item"><a href="#"></a>Service</li>
+                <li class="main__nav-item"><a href="#"></a>Price</li>
+                <li class="main__nav-item"><a href="#"></a>Booking</li>
+                <li class="main__nav-item"><a href="#"></a>Pages</li>
+                <li class="main__nav-item"><a href="#"></a>Contact</li>
+            </ul>
+            <div class="quote__btn">
+                <button>Get Quote</button>
+            </div>
+        </nav>
+    </div>
+    <div class="main__heading">
+        <h3 class="main__heading-subtitle">Best Pet Services</h3>
+        <h1 class="main__heading-title">Keep Your Pet Happy</h1>
+        <p class="main__heading-info">Duo nonumy et dolor tempor no et. Diam sit diam sit diam erat</p>
+    </div>
 </body>
 </html>
