background image set,styling done,refactoring code

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -80,9 +80,16 @@
         </nav>
     </div>
     <div class="main__heading">
-        <h3 class="main__heading-subtitle">Best Pet Services</h3>
-        <h1 class="main__heading-title">Keep Your Pet Happy</h1>
-        <p class="main__heading-info">Duo nonumy et dolor tempor no et. Diam sit diam sit diam erat</p>
+        <div class="main__heading-items">
+            <h3 class="main__heading-subtitle">Best Pet Services</h3>
+            <h1 class="main__heading-title">Keep Your Pet Happy</h1>
+            <p class="main__heading-info">Duo nonumy et dolor tempor no et. Diam sit diam sit diam erat</p>
+            <div class="info__btns">
+                <button class="info__btn book">Book Now</button>
+                <button class="info__btn learn__more">Learn More</button>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
