About Information section done

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -91,5 +91,25 @@
         </div>
         
     </div>
+    <div class="about">
+        <div class="about__info">
+            <h3 class="about__subheading">About Us</h3>
+            <h1 class="about__heading"><span class="span1">Boarding</span>&<span class="span2">Daycare</span></h1>
+            <p class="about__desc1">Amet stet amet ut. Sit no vero vero no dolor. Sed erat ut sea. Just clita ut stet kasd at diam sit erat vero sit.</p>
+            <p class="about__desc2">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+            <div class="about__basicInfo">
+                <ul class="about__basicInfo-items">
+                    <li><i class="fa-solid fa-circle-check"></i><span>In Industry</span> </li>
+                    <li><i class="fa-solid fa-circle-check"></i><span>Services</span> </li>
+                    <li><i class="fa-solid fa-circle-check"></i><span>24/7 Customer Support</span></li>
+                </ul>
+                <button class="about__btn">Learn More</button>
+            </div>
+        </div>
+        
+        <div class="about__image">
+            <img src="./images/about-1.jpg" alt="A puppy">
+        </div>
+    </div>
 </body>
 </html>
