services container added

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -111,5 +111,51 @@
             <img src="./images/about-1.jpg" alt="A puppy">
         </div>
     </div>
+    <div class="service__container">
+        <div class="container__headings">
+            <h3>Our Services</h3>
+            <h1><span>Premium</span> Pet Services</h1>
+        </div>
+        
+        <div class="service__container-items">
+            <div class="service__container-item">
+                <h1 class="service__icon"><i class="fa-solid fa-house-chimney"></i></h1>
+                <h2>Pet Boarding</h2>
+                <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+                <p class="service__link"><a href="">READ MORE</a></p>
+            </div>
+            <div class="service__container-item">
+                <h1 class="service__icon"><i class="fa-solid fa-bone"></i></h1>
+                <h2>Pet Boarding</h2>
+                <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+                <p class="service__link"><a href="">READ MORE</a></p>
+            </div>
+            <div class="service__container-item">
+                <h1 class="service__icon"><i class="fa-solid fa-scissors"></i></h1>
+                <h2>Pet Boarding</h2>
+                <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+                <p class="service__link"><a href="">READ MORE</a></p>
+            </div>
+            <div class="service__container-item">
+                <h1 class="service__icon"><i class="fa-solid fa-cat"></i></i></h1>
+                <h2>Pet Boarding</h2>
+                <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+                <p class="service__link"><a href="">READ MORE</a></p>
+            </div>
+            <div class="service__container-item">
+                <h1 class="service__icon"><i class="fa-solid fa-dog"></i></i></h1>
+                <h2>Pet Boarding</h2>
+                <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+                <p class="service__link"><a href="">READ MORE</a></p>
+            </div>
+            <div class="service__container-item">
+                <h1 class="service__icon"><i class="fa-solid fa-book-medical"></i></h1>
+                <h2>Pet Boarding</h2>
+                <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+                <p class="service__link"><a href="">READ MORE</a></p>
+            </div>
+            
+        </div>
+    </div>
 </body>
 </html>
