--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -126,31 +126,31 @@
             </div>
             <div class="service__container-item">
                 <h1 class="service__icon"><i class="fa-solid fa-bone"></i></h1>
-                <h2>Pet Boarding</h2>
+                <h2>Pet Feeding</h2>
                 <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
                 <p class="service__link"><a href="">READ MORE</a></p>
             </div>
             <div class="service__container-item">
                 <h1 class="service__icon"><i class="fa-solid fa-scissors"></i></h1>
-                <h2>Pet Boarding</h2>
+                <h2>Pet Grooming</h2>
                 <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
                 <p class="service__link"><a href="">READ MORE</a></p>
             </div>
             <div class="service__container-item">
                 <h1 class="service__icon"><i class="fa-solid fa-cat"></i></i></h1>
-                <h2>Pet Boarding</h2>
+                <h2>Pet Training</h2>
                 <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
                 <p class="service__link"><a href="">READ MORE</a></p>
             </div>
             <div class="service__container-item">
                 <h1 class="service__icon"><i class="fa-solid fa-dog"></i></i></h1>
-                <h2>Pet Boarding</h2>
+                <h2>Pet Exercise</h2>
                 <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
                 <p class="service__link"><a href="">READ MORE</a></p>
             </div>
             <div class="service__container-item">
                 <h1 class="service__icon"><i class="fa-solid fa-book-medical"></i></h1>
-                <h2>Pet Boarding</h2>
+                <h2>Pet Treatment</h2>
                 <p class="service__desc">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
                 <p class="service__link"><a href="">READ MORE</a></p>
             </div>
