feature block added

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -157,5 +157,25 @@
             
         </div>
     </div>
+    <div class="feature__block">
+        <div class="feature__image">
+            <img src="./images/feature.jpg">
+        </div>
+        <div class="feature">
+            <h3 class="feature__subtitle">Why Choose Us?</h3>
+            <h1 class="feature__title"><span>Special Care</span> On Pets</h1>
+            <p class="feature__desc">Dolor lorem lorem ipsum sit et ipsum. Sadip sea amet diam sed ut vero no sit. Et elitr stet sed sit sed kasd. Erat duo eos et erat sed diam duo</p>
+            <div class="features__titles">
+                <ul class="features__box">
+                    <li><i class="fa-solid fa-cat"></i><span>Best In Industry</span></li>
+                    <li><i class="fa-solid fa-hand-holding-medical"></i><span>Special Care</span></li>
+                </ul>
+                <ul class="features__box">
+                    <li><i class="fa-solid fa-dog"></i><span>Emergency Services</span></li>
+                    <li><i class="fa-solid fa-cat"></i><span>Customer Support</span></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
