price container added

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -177,5 +177,34 @@
             </div>
         </div>
     </div>
+    <div class="price__container">
+        <div class="price__container-headings">
+            <h3>Pricing Plan</h3>
+            <h1>Choose the<span> Best Price</span></h1>
+        </div>
+        <div class="prices">
+            <div class="price">
+                <div class="price__section section-1">
+                    <h3>Basic</h3>
+                    <h1><small class="align__top">$</small>49<small class="align__bottom">/Mo</small></h1>
+                </div>
+                <button class="price__btn">Signup Now</button>
+            </div>
+            <div class="price">
+                <div class="price__section section-2">
+                    <h3>Standard</h3>
+                    <h1><small class="align__top">$</small>99<small class="align__bottom">/Mo</small></h1>
+                </div>
+                <button class="price__btn standard__btn">Signup Now</button>
+            </div>
+            <div class="price">
+                <div class="price__section section-3">
+                    <h3>Premium</h3>
+                    <h1><small class="align__top">$</small>149<small class="align__bottom">/Mo</small></h1>
+                </div>
+                <button class="price__btn">Signup Now</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
