price container updated

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -188,6 +188,14 @@
                     <h3>Basic</h3>
                     <h1><small class="align__top">$</small>49<small class="align__bottom">/Mo</small></h1>
                 </div>
+                <div class="price__features">
+                    <ul>
+                        <li><i class="fa-solid fa-check"></i><span>Feeding</span></li>
+                        <li><i class="fa-solid fa-check"></i><span>Boarding</span></li>
+                        <li><i class="fa-solid fa-xmark"></i><span>Spa & Grooming</span></li>
+                        <li id="no__border"><i class="fa-solid fa-xmark"></i><span>Veterinary Medicine</span></li>
+                    </ul>
+                </div>
                 <button class="price__btn">Signup Now</button>
             </div>
             <div class="price">
@@ -195,12 +203,28 @@
                     <h3>Standard</h3>
                     <h1><small class="align__top">$</small>99<small class="align__bottom">/Mo</small></h1>
                 </div>
+                <div class="price__features">
+                    <ul>
+                        <li><i class="fa-solid fa-check"></i><span>Feeding</span></li>
+                        <li><i class="fa-solid fa-check"></i><span>Boarding</span></li>
+                        <li><i class="fa-solid fa-check"></i><span>Spa & Grooming</span></li>
+                        <li id="no__border"><i class="fa-solid fa-xmark"></i><span>Veterinary Medicine</span></li>
+                    </ul>
+                </div>
                 <button class="price__btn standard__btn">Signup Now</button>
             </div>
             <div class="price">
                 <div class="price__section section-3">
                     <h3>Premium</h3>
                     <h1><small class="align__top">$</small>149<small class="align__bottom">/Mo</small></h1>
+                </div>
+                <div class="price__features">
+                    <ul>
+                        <li><i class="fa-solid fa-check"></i><span>Feeding</span></li>
+                        <li><i class="fa-solid fa-check"></i><span>Boarding</span></li>
+                        <li><i class="fa-solid fa-check"></i><span>Spa & Grooming</span></li>
+                        <li id="no__border"><i class="fa-solid fa-check"></i><span>Veterinary Medicine</span></li>
+                    </ul>
                 </div>
                 <button class="price__btn">Signup Now</button>
             </div>
