team member section added & completed

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -230,5 +230,49 @@
             </div>
         </div>
     </div>
+    <div class="team__members-container">
+        <div class="team__member-headings">
+            <h3>Team Member</h3>
+            <h1><span>Meet Our</span> Team Member</h1>
+        </div>
+        <div class="team__members">
+            <div class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/team-1.jpg">
+                </div>
+                <div class="team__member-intro">
+                    <h4>Mollie Ross</h4>
+                    <h5>Founder & CEO</h5>
+                </div>
+            </div>
+            <div class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/team-2.jpg">
+                </div>
+                <div class="team__member-intro">
+                    <h4>Jennifer Page</h4>
+                    <h5>Chef Executive</h5>
+                </div>
+            </div>
+            <div class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/team-3.jpg">
+                </div>
+                <div class="team__member-intro">
+                    <h4>Kate Glover</h4>
+                    <h5>Doctor</h5>
+                </div>
+            </div>
+            <div class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/team-4.jpg">
+                </div>
+                <div class="team__member-intro">
+                    <h4>Lilly Fry</h4>
+                    <h5>Trainer</h5>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
