client container added

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -274,5 +274,49 @@
             </div>
         </div>
     </div>
+    <div class="client__says-container">
+        <div class="client__says-headings">
+            <h3>Testimonial</h3>
+            <h1><span>Our Client</span> Says</h1>
+        </div>
+        <div class="client__says-items">
+            <div class="client">
+                <div class="client__image">
+                    <img src="./images/user.jpg">
+                </div>
+                <div class="client__intro">
+                    <h3>Client Name</h3>
+                    <h4>Profession</h4>
+                </div>
+                <div class="client__desc">
+                    <p>Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum sanct clita</p>
+                </div>
+            </div>
+            <div class="client">
+                <div class="client__image">
+                    <img src="./images/testimonial-1.jpg">
+                </div>
+                <div class="client__intro">
+                    <h3>Client Name</h3>
+                    <h4>Profession</h4>
+                </div>
+                <div class="client__desc">
+                    <p>Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum sanct clita</p>
+                </div>
+            </div>
+            <div class="client">
+                <div class="client__image">
+                    <img src="./images/testimonial-2.jpg">
+                </div>
+                <div class="client__intro">
+                    <h3>Client Name</h3>
+                    <h4>Profession</h4>
+                </div>
+                <div class="client__desc">
+                    <p>Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum sanct clita</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
