updates container added

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -318,5 +318,106 @@
             </div>
         </div>
     </div>
+    <div class="updates__container">
+        <div class="updates__headings">
+            <h3>Pet Blog</h3>
+            <h1><span>Updates</span> From Blog</h1>
+        </div>
+        <div class="updates__items">
+            <div class="updates__item">
+                <div class="update__image">
+                    <img src="./images/blog-1.jpg">
+                </div>
+                <div class="update__heading">
+                    <h2>Diam amet eos at no eos</h2>
+                </div>
+                <div class="updates__info">
+                    <ul>
+                        <li><i class="fa-solid fa-user"></i>Admin</li>
+                        <li><i class="fa-solid fa-folder"></i>Web Design</li>
+                        <li><i class="fa-solid fa-comments"></i>15</li>
+                    </ul>
+                    <div class="desc">
+                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos, rebum sit vero stet justo</p>
+                    </div>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <div class="updates__item">
+                <div class="update__image">
+                    <img src="./images/blog-2.jpg">
+                </div>
+                <div class="update__heading">
+                    <h2>Diam amet eos at no eos</h2>
+                </div>
+                <div class="updates__info">
+                    <ul>
+                        <li><i class="fa-solid fa-user"></i>Admin</li>
+                        <li><i class="fa-solid fa-folder"></i>Web Design</li>
+                        <li><i class="fa-solid fa-comments"></i>15</li>
+                    </ul>
+                    <div class="desc">
+                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos, rebum sit vero stet justo</p>
+                    </div>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <div class="updates__item">
+                <div class="update__image">
+                    <img src="./images/blog-3.jpg">
+                </div>
+                <div class="update__heading">
+                    <h2>Diam amet eos at no eos</h2>
+                </div>
+                <div class="updates__info">
+                    <ul>
+                        <li><i class="fa-solid fa-user"></i>Admin</li>
+                        <li><i class="fa-solid fa-folder"></i>Web Design</li>
+                        <li><i class="fa-solid fa-comments"></i>15</li>
+                    </ul>
+                    <div class="desc">
+                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos, rebum sit vero stet justo</p>
+                    </div>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <div class="footer__container">
+        <div class="footer__items">
+            <div class="footer__item summary">
+                <h2>Pet<span>Lover</span></h2>
+                <p>Ipsum amet sed vero et lorem stet eos ut, labore sed sed stet sea est ipsum ut. Volup amet ea sanct ipsum, dolore vero lorem no duo eirmod. Eirmod amet ipsum no ipsum lorem clita ut. Ut sed sit lorem ea lorem sed, amet stet sit sea ea diam tempor kasd kasd. Diam nonumy etsit tempor ut sed diam sed et ea</p>
+            </div>
+            <div class="footer__item contact-info">
+                <h3>Get in Touch</h3>
+                <ul class="basic__contact__info">
+                    <li><i class="fa-solid fa-location-dot"></i>123 Street, New York, USA</li>
+                    <li><i class="fa-solid fa-phone"></i>+012 345 67890</li>
+                    <li><i class="fa-solid fa-envelope"></i>info@example.com</li>
+                </ul>
+                <ul class="social__contact-info">
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-linkedin"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                </ul>
+            </div>
+            <div class="footer__item links">
+                <h3>Popular Links</h3>
+                <ul class="popular__links">
+                    <li><i class="fa-solid fa-angle-right"></i><a href="#">Home</a></li>
+                    <li><i class="fa-solid fa-angle-right"></i><a href="#">About Us</a></li>
+                    <li><i class="fa-solid fa-angle-right"></i><a href="#">Our Services</a></li>
+                    <li><i class="fa-solid fa-angle-right"></i><a href="#">Our Team</a></li>
+                    <li><i class="fa-solid fa-angle-right"></i><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="footer__item submit__form">
+                <h3>Newsletter</h2>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
