footer__container done

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -392,7 +392,7 @@
             </div>
             <div class="footer__item contact-info">
                 <h3>Get in Touch</h3>
-                <ul class="basic__contact__info">
+                <ul class="basic__contact-info">
                     <li><i class="fa-solid fa-location-dot"></i>123 Street, New York, USA</li>
                     <li><i class="fa-solid fa-phone"></i>+012 345 67890</li>
                     <li><i class="fa-solid fa-envelope"></i>info@example.com</li>
@@ -414,10 +414,32 @@
                     <li><i class="fa-solid fa-angle-right"></i><a href="#">Contact Us</a></li>
                 </ul>
             </div>
-            <div class="footer__item submit__form">
+            <div class="footer__item final__submit">
                 <h3>Newsletter</h2>
+                <div class="form">
+                    <form class="submit__form">
+                        <input type="text" id = "name" name="name" placeholder="Your Name"><br><br>
+                        <input type="email" id = "email" name="email" placeholder="Your Email"><br><br>
+                        <input type="submit" id = "submit" value="Submit Now">
+                    </form>
+                </div>
+                
             </div>
         </div>
     </div>
+    <footer class="main__footer">
+        <div class="content1">
+            <i class="fa-solid fa-copyright"></i>
+            <h4><a href="#">Your Site Name.</a>All Rights Reserved. Designed by <a href="#">HTML Codex</a></h4>
+        </div>
+        <div class="content2">
+            <ul>
+                <li>Privacy</li>
+                <li>Terms</li>
+                <li>FAQs</li>
+                <li>Help</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
