:fire: project started

--- a/PetLover/index.html
+++ b/PetLover/index.html
@@ -419,7 +419,7 @@
                 <div class="form">
                     <form class="submit__form">
                         <input type="text" id = "Name" name="name" placeholder="Your Name"><br><br>
-                        <input type="Email" id = "email" name="email" placeholder="Your Email"><br><br>
+                        <input type="Email" id = "Email" name="email" placeholder="Your Email"><br><br>
                         <input type="submit" id = "submit" value="Submit Now">
                     </form>
                 </div>
