main background image added

--- a/Gymnast/index.html
+++ b/Gymnast/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gymnast</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="main__background-image"></div>
+    <header class="main__header">
+        <nav class="navbar">
+            <h1>GYMNAST</h1>
+            <div class="navbar__content">
+                <ul class="navbar__items">
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Our Features</li>
+                    <li>Classes</li>
+                    <li>Pages</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
