--- a/Gymnast/index.html
+++ b/Gymnast/index.html
@@ -15,15 +15,20 @@
             <h1>GYMNAST</h1>
             <div class="navbar__content">
                 <ul class="navbar__items">
-                    <li>Home</li>
-                    <li>About Us</li>
-                    <li>Our Features</li>
-                    <li>Classes</li>
-                    <li>Pages</li>
-                    <li>Contact</li>
+                    <li id="home-item"><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Our Features</a></li>
+                    <li><a href="#">Classes</a></li>
+                    <li><a href="#">Pages</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </nav>
     </header>
+    <div class="main__headings">
+        <h3>Gym & Fitness Center</h3>
+        <h1>Best Gym In Town</h1>
+        <button class="join__btn">Join Us Now</button>
+    </div>
 </body>
 </html>
