top container done

--- a/Gymnast/index.html
+++ b/Gymnast/index.html
@@ -28,7 +28,8 @@
     <div class="main__headings">
         <h3>Gym & Fitness Center</h3>
         <h1>Best Gym In Town</h1>
-        <button class="join__btn">Join Us Now</button>
+        <button>Join Us Now</button>
+        
     </div>
 </body>
 </html>
