:lipstick: building container done

--- a/Gymnast/index.html
+++ b/Gymnast/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gymnast</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Antonio:wght@100&family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600&family=Montserrat:wght@500&family=Oswald:wght@300;400&family=Varela&family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,8 +29,19 @@
     <div class="main__headings">
         <h3>Gym & Fitness Center</h3>
         <h1>Best Gym In Town</h1>
-        <button>Join Us Now</button>
-        
+        <button class="joinus-btn">Join Us Now</button>
+    </div>
+    <div class="building-type-cont">
+        <div class="body__building building-type">
+            <h1>Body Building</h1>
+            <p>Lorem justo tempor sit aliquyam invidunt, amet vero ea dolor ipsum ut diam sit dolores, dolor sit eos sea sanctus erat lorem nonumy sanctus takimata. Kasd amet sit sadipscing at..</p>
+            <button class="join-btn">Join Now</button>
+        </div>
+        <div class="muscle__building building-type">
+            <h1>Muscle Building</h1>
+            <p>Lorem justo tempor sit aliquyam invidunt, amet vero ea dolor ipsum ut diam sit dolores, dolor sit eos sea sanctus erat lorem nonumy sanctus takimata. Kasd amet sit sadipscing at..</p>
+            <button class="join-btn">Join Now</button>
+        </div>
     </div>
 </body>
 </html>
