--- a/Gymnast/index.html
+++ b/Gymnast/index.html
@@ -43,5 +43,27 @@
             <button class="join-btn">Join Now</button>
         </div>
     </div>
+    <div class="about-cont">
+        <div class="about-image">
+            <img src="./images/about.jpg" >
+        </div>
+        <div class="about-desc">
+            <h1>10 Years Experience</h1>
+            <p>Labore vero lorem eos sed aliquy ipsum aliquy sed. Vero dolore dolore takima ipsum lorem rebum</p>
+            <div class="achievements">
+                <div class="certificate achievement">
+                    <i class="fa-solid fa-dumbbell"></i>
+                    <h2>Certified GYM Center</h2>
+                    <p>Ipsum sanctu dolor ipsum dolore sit et kasd duo</p>
+                </div>
+                <div class="award achievement">
+                    <i class="fa-solid fa-award"></i>
+                    <h2>Award Winning</h2>
+                    <p>Ipsum sanctu dolor ipsum dolore sit et kasd duo</p>
+                </div>
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
