:lipstick: benefits container added

--- a/Gymnast/index.html
+++ b/Gymnast/index.html
@@ -65,5 +65,35 @@
             <button>Learn More</button>
         </div>
     </div>
+    <div class="benefits-cont">
+        <div class="benefit">
+            <div>
+                <i class="fa-regular fa-calendar-check benefit-icon"></i>
+            </div>
+            <div class="benefit-desc">
+                <h1>Progression</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero</p>
+            </div>
+            
+        </div>
+        <div class="benefit workout">
+            <div>
+                <i class="fa-solid fa-dumbbell benefit-icon"></i>
+            </div>
+            <div class="benefit-desc">
+                <h1>Workout</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero</p>
+            </div>
+        </div>
+        <div class="benefit">
+            <div>
+                <i class="fa-brands fa-nutritionix benefit-icon"></i>
+            </div>
+            <div class="benefit-desc">
+                <h1>Nutrition</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
