:construction: services container done

--- a/Gymnast/index.html
+++ b/Gymnast/index.html
@@ -95,5 +95,53 @@
             </div>
         </div>
     </div>
+    <div class="services-cont">
+        <div class="services-cont__headings">
+            <h3>Why Choose Us?</h3>
+            <h1>Benifits of Joining Our GYM</h1>
+        </div>
+        <div class="services">
+            <div class="service">
+               <div class="img-icon-cont">
+                   <img src="./images/feature-1.jpg">
+                   <i class="fa-solid fa-dumbbell service__icon"></i>
+               </div>
+               <div class="service-desc">
+                   <h2>Videos Instruction</h2>
+                   <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor</p>
+               </div>
+            </div>
+            <div class="service">
+               <div class="img-icon-cont">
+                   <img src="./images/feature-2.jpg">
+                   <i class="fa-solid fa-calendar-check service__icon"></i>
+               </div>
+               <div class="service-desc">
+                   <h2>Training Calendar</h2>
+                   <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor</p>
+               </div>
+            </div>
+            <div class="service">
+               <div class="img-icon-cont">
+                   <img src="./images/feature-3.jpg">
+                   <i class="fa-solid fa-wifi service__icon"></i>
+               </div>
+               <div class="service-desc">
+                   <h2>Free Apps & WiFi</h2>
+                   <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor</p>
+               </div>
+            </div>
+            <div class="service">
+               <div class="img-icon-cont">
+                   <img src="./images/feature-4.jpg">
+                   <i class="fa-solid fa-handshake service__icon"></i>
+               </div>
+               <div class="service-desc">
+                   <h2>Community Support</h2>
+                   <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor</p>
+               </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
