subscribe content done

--- a/Gymnast/index.html
+++ b/Gymnast/index.html
@@ -143,5 +143,15 @@
             </div>
         </div>
     </div>
+    <div class="subscribe-cont">
+        <img src="./images/bg.jpg">
+        <div class="subscribe-cont-desc">
+            <h1>Subscribe Our Newsletter</h1>
+            <p>Subscribe and get Our latest article in your inbox</p>
+            <input type="email" placeholder="Your Email">
+            <button>Subscribe</button>
+        </div>
+    </div>
+    
 </body>
 </html>
